# math_json_parser

./: .gitignore  README.md  math_parser.py  parser_numexpr.py  parser_polars.py  pyproject.toml  test_operator.py
docs/: RE-21.json  RE-22.json
math_json_parser/: MathParser.py  RE-21.json  moo_json_format.json  mop2.json  parser_desdeo.py  parser_numexpr.py  parser_polars.py
tests/: test_data.json  test_parser.py  test_parser_ne.py  test_parser_pl.py
