[tool.poetry]
name = "math-json-paraser"
version = "0.1.0"
description = "translating math json into polars expression and numpy expression"
authors = ["timbrist <timbrist@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
