[tool.poetry]
name = "math-json-paraser"
version = "0.1.0"
description = "translating math json into polars expression and numpy expression"
authors = ["timbrist <timbrist@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"
polars = "^0.17.11"
sympy = "^1.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.test.dependencies]
numpy = "^1.24.3"
pandas = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
